[gd_scene load_steps=11 format=3 uid="uid://djvdkisjlle5f"]

[ext_resource type="Script" path="res://main.gd" id="1_nnrgu"]
[ext_resource type="Texture2D" uid="uid://c0ts7y140e77l" path="res://Assets/Mini Pixel Pack 3/Space_BG (2 frames) (64 x 64).png" id="1_pfhbi"]
[ext_resource type="PackedScene" uid="uid://du1lmuonotujm" path="res://player.tscn" id="2_p17qp"]
[ext_resource type="PackedScene" uid="uid://324eiitc0ov2" path="res://ui.tscn" id="4_nxbtf"]
[ext_resource type="Texture2D" uid="uid://2qqbek0ku1nl" path="res://Assets/Mini Pixel Pack 3/UI objects/START (48 x 8).png" id="5_vs4jc"]
[ext_resource type="Texture2D" uid="uid://eihfv206qbo6" path="res://Assets/Mini Pixel Pack 3/UI objects/GAME_OVER (72 x 8).png" id="6_4svrx"]
[ext_resource type="AudioStream" uid="uid://bmt3wdsl2txy2" path="res://Assets/audio/lady-of-the-80x27s-128379.mp3" id="7_jn3ij"]

[sub_resource type="Animation" id="Animation_rhgpm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 240, 320)]
}

[sub_resource type="Animation" id="Animation_ijvbs"]
resource_name = "scroll"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 240, 320), Rect2(0, -64, 240, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kiohw"]
_data = {
"RESET": SubResource("Animation_rhgpm"),
"scroll": SubResource("Animation_ijvbs")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_nnrgu")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("1_pfhbi")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 240, 320)

[node name="Player" parent="." instance=ExtResource("2_p17qp")]
position = Vector2(105, 236)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "scroll"
libraries = {
"": SubResource("AnimationLibrary_kiohw")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("4_nxbtf")]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="TextureButton" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("5_vs4jc")

[node name="GameOver" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("6_4svrx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jn3ij")
autoplay = true

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="shield_changed" from="Player" to="CanvasLayer/UI" method="update_shield"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/Start" to="." method="_on_start_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
